--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -107,6 +107,7 @@
   "devDependencies": {
     "@coinbase/wallet-sdk": "^3.3.0",
     "@walletconnect/ethereum-provider": "^1.7.8",
+    "abitype": "^0.0.6",
     "ethers": "^5.6.5"
   },
   "keywords": [
